--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -12,7 +12,7 @@ jobs:
           root_file: main.tex
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
-          extra_system_packages: inkscape coreutils findutils bash ncurses-bin
+          extra_system_packages: inkscape coreutils findutils bash ncurses
       - name: Upload PDF file
         uses: actions/upload-artifact@v4
         with:
